Fixed checkboxes and radios in FF on Android
The tick in radio buttons and checkboxes were invisible in Firefox
on Android.

--- a/css/sakura-dark-solarized.css
+++ b/css/sakura-dark-solarized.css
@@ -157,6 +157,9 @@ textarea, select, input[type] {
     border: 1px solid #2aa198;
     outline: 0; }
 
+input[type="checkbox"], input[type="radio"] {
+  padding: 0px; }
+
 input[type="checkbox"]:focus {
   outline: 1px dotted #2aa198; }
 
