--- a/css/sakura-earthly.css
+++ b/css/sakura-earthly.css
@@ -156,6 +156,9 @@ textarea, select, input[type] {
     border: 1px solid #338618;
     outline: 0; }
 
+input[type="checkbox"], input[type="radio"] {
+  padding: 0px; }
+
 input[type="checkbox"]:focus {
   outline: 1px dotted #338618; }
 
