--- a/css/sakura-vader.css
+++ b/css/sakura-vader.css
@@ -157,6 +157,9 @@ textarea, select, input[type] {
     border: 1px solid #eb99a1;
     outline: 0; }
 
+input[type="checkbox"], input[type="radio"] {
+  padding: 0px; }
+
 input[type="checkbox"]:focus {
   outline: 1px dotted #eb99a1; }
 
